--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
     <div>hello</div>
     <div id="how">how</div>
-    <div>are</div>
+    <div class="are">are</div>
     <div>you ?</div>
+    <span>test</span>
+    <button id="mybtn">click</button>
     <script src="first.js"></script>
 </body>
 </html>
