dynamically changing a heading and remove the heading

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>you ?</div>
     <span>test</span>
     <button id="mybtn">click</button>
+    <button>delete</button>
     <script src="first.js"></script>
 </body>
 </html>
