adding some date methods

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <span>test</span>
     <button id="mybtn">click</button>
     <button>delete</button>
+    <div class="date">
+        <h2></h2>
+    </div>
+
+
+
+    
     <script src="first.js"></script>
 </body>
 </html>
