--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     </div>
 
 
+    <div class="parent">
+        <div class="day">Monday</div>
+        <div class="day">Tuesday</div>
+        <div class="day">Wednesday</div>
+        <div class="day">Thursday</div>
+    </div>
 
     
     <script src="first.js"></script>
