adding a some event

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         <div class="day">Thursday</div>
     </div>
 
+    <input type="button" id="btn" value="submit">
+
+    <ul id="imgs">
+        <li><span>one</span></li>
+        <li><span>two</span></li>
+        <li><span>three</span></li>
+        <li><span>four</span></li>
+    </ul>
+
     
     <script src="first.js"></script>
 </body>
