add a running time

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <li><span>four</span></li>
     </ul>
 
+    <div class="c_time">
+        <h1></h1>
+    </div>
+
     
     <script src="first.js"></script>
 </body>
